--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -218,7 +218,7 @@ input[type="button"].theme-chooser2 {
 }
 input[type="button"]:hover.theme-chooser2 {
     background-color: #424242;
-    color: #000;
+    color: #fff;
     font-size: 1em;
 }
 
