minor button updates to Allison 5

--- a/htdocs/css/themes-library-allison.css
+++ b/htdocs/css/themes-library-allison.css
@@ -235,7 +235,8 @@ input[type=submit]:hover
 
 input[type=button]
 {
-    color: #fff;
+    background-color: #fff;
+    color: #000;
 }
 
 input[type=button]:hover
