--- a/htdocs/css/themes-library-allison.css
+++ b/htdocs/css/themes-library-allison.css
@@ -38,15 +38,15 @@ img
 }
 
 h1 {
-	color: #fff;
+	color: #e6e6e6;
 }
 
 h2 {
-	color: #fff;
+	color: #e6e6e6;
 }
 
 h3 {
-	color: #fff;
+	color: #e6e6e6;
 }
 
 #container
@@ -69,15 +69,15 @@ header {
 
 #fill-tagline 
 {
-	color: #505050;
+	color: #e6e6e6;
 }
 
 #logout-button {
-    color: #fff;
+    color: #000;
 }
 
 #patron-info {
-    color: #505050;
+    color: #e6e6e6;
 }
 
 nav
