--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -85,18 +85,21 @@ $('document').ready(function(){
         $("#csstheme").attr("href", "/css/themes-library-colors.css");
 	$("#themeroller-css").attr("href","/themes/fILL-clean/jquery-ui.css");
 	$("#theme-logo").attr("src","/img/fill-lib-logo.png");
+	$(".small-function-button").switchClass("theme-chooser2 theme-chooser3","theme-chooser1",0);
 	$.cookie('fILL-theme','theme1', { expires: 7, path: '/' });
     });
     $('#theme2').click(function () {
         $("#csstheme").attr("href", "/css/themes-library-contrast.css");
 	$("#themeroller-css").attr("href","/themes/fILL-contrast/jquery-ui.css");
 	$("#theme-logo").attr("src","/img/fill-lib-logo-theme2.png");
+	$(".small-function-button").switchClass("theme-chooser1 theme-chooser3","theme-chooser2",0);
 	$.cookie('fILL-theme','theme2', { expires: 7, path: '/' });
     });
     $('#theme3').click(function () {
         $("#csstheme").attr("href", "/css/themes-library-allison.css");
 	$("#themeroller-css").attr("href","/themes/Blitzer/jquery-ui.css");
 	$("#theme-logo").attr("src","/img/fill-lib-logo-theme2.png");
+	$(".small-function-button").switchClass("theme-chooser1 theme-chooser2","theme-chooser3",0);
 	$.cookie('fILL-theme','theme3', { expires: 7, path: '/' });
     });
 
@@ -182,8 +185,8 @@ $('document').ready(function(){
     <input id="theme1" class="theme-chooser1" type="button" value="A" />
     <input id="theme2" class="theme-chooser2" type="button" value="A" />
     <input id="theme3" class="theme-chooser3" type="button" value="A" />
-    <input id="incrFont" class="library-style" type="button" value="+" />
-    <input id="decrFont" class="library-style" type="button" value="-" />
+    <input id="incrFont" class="theme-chooser1 small-function-button" type="button" value="+" />
+    <input id="decrFont" class="theme-chooser1 small-function-button" type="button" value="-" />
   </div>
 
   </div><!--Div header-right-->
