--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -24,26 +24,6 @@ $('document').ready(function(){
         "bAutoWidth": false
     });
 
-<!--
-//    $('#datatable_contacts tbody tr').live('mouseover mouseout', function (event) {    // deprecated in jquery 1.7
-//    $(document).on("mouseover mouseout", "#datatable_contacts tbody tr", function() {  // suggested replacement
-    $("#datatable_contacts tbody").on("mouseover mouseout", "tr", function() {           // reduce bubble-up
-
-        if (event.type == 'mouseover') {
-            $(this).addClass("ui-state-hover");
-        } else {
-            $(this).removeClass("ui-state-hover");
-        }
-    });
--->
-
-    // clicking the email address opens your default mailer (in a separate tab/window,
-    // if your default mailer is a web-mail like GMail or Yahoo)
-    $("#datatable_contacts tbody tr td:nth-child(4)").on("click", function(event){
-      var link = '/mailto.html#mailto:' + $(this).text();
-      window.open(link, 'Mailer');
-      return false;
-    });
 });
 
 </script>
@@ -68,7 +48,7 @@ $('document').ready(function(){
 		  <td><TMPL_VAR NAME="library"></td>
 		  <td><TMPL_VAR NAME="name"></td>
 		  <td><TMPL_VAR NAME="phone"></td>
-		  <td><TMPL_VAR NAME="email_address"></td>
+		  <td><a href='mailto:<TMPL_VAR NAME="email_address">'><TMPL_VAR NAME="email_address"></td>
 		  <td>
 		    <TMPL_VAR NAME="mailing_address_line1"><br>
 		    <TMPL_VAR NAME="mailing_address_line2"><br>
@@ -87,6 +67,7 @@ $('document').ready(function(){
     <h2>Instructions</h2>
     <ol>
       <li>Click on the email address to send a new email to the library.</li>
+      <li>Right-click on the email address to copy it.</li>
     </ol>
   </div>
 </div>
