fixed restriction on town/city name length

--- a/templates/myaccount/settings.tmpl
+++ b/templates/myaccount/settings.tmpl
@@ -25,7 +25,7 @@
 		<input TYPE="text" NAME="mailing_address_line1" SIZE="60" MAXLENGTH="200" VALUE="<TMPL_VAR NAME=editMailingAddressLine1>"><br />
 	    
 	    <label for="city">Town/City:</label><br>
-		<input TYPE="text" NAME="city" SIZE="60" MAXLENGTH="6" VALUE="<TMPL_VAR NAME=editCity>"><br />
+		<input TYPE="text" NAME="city" SIZE="60" VALUE="<TMPL_VAR NAME=editCity>"><br />
 	    
 	    <label for="province">Province:</label><br>
 		<input TYPE="text" NAME="province" SIZE="2" MAXLENGTH="2" VALUE="<TMPL_VAR NAME=editProvince>"><br />
