--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -20,6 +20,7 @@
 
   <link rel="stylesheet" href="/css/fILL-public-accessible.1.1.css"></link>
   <link rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"></link>
+  <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
   <script type="text/javascript" src="/js/fILL_client-public-1.9.js"></script>
@@ -30,11 +31,30 @@
     document.getElementById(tab_id).className='current_tab';
   }
 
+  function set_secondary_tab(tab_id) {
+    document.getElementById(tab_id).className='current_tab';
+  }
+
+ function increaseFontSize() {
+    $('body').find('div, h1, h2, h3, p, td').each(function () {
+        $(this).css({
+            'font-size': parseFloat($(this).css('font-size')) + 1
+        });
+    });
+ }
+ function decreaseFontSize() {
+    $('body').find('div, h1, h2, h3, p, td').each(function () {
+        $(this).css({
+            'font-size': parseFloat($(this).css('font-size')) - 1
+        });
+    });
+  } 
+
 </script>
 
 <!-- Google analytics -->
 <script type="text/javascript">
-
+<!--
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-21021258-1']);
   _gaq.push(['_trackPageview']);
@@ -44,7 +64,7 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
+-->
 </script>
 
 <script type="text/javascript">
@@ -65,6 +85,13 @@
         var $title = $(this).attr("title");
         $("#query").val( $title );
         $("#search-submit-button").click();
+    });
+
+    $('#incrFont').click(function () {
+        increaseFontSize();
+    });
+    $('#decrFont').click(function () {
+        decreaseFontSize();
     });
 
   });
@@ -106,6 +133,8 @@
           <div id="username"><TMPL_VAR name="username"></div>
           <p><TMPL_VAR name="library"></p>
           <p style="display:none"><TMPL_VAR name="lid"></p>
+
+	  <input id="incrFont" class="public-style" type="button" value="+A" /><input id="decrFont" class="public-style" type="button" value="-A" />
       </div>
     </div>
 
