--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -97,7 +97,8 @@ $('document').ready(function(){
     });
     $('#theme3').click(function () {
         $("#csstheme").attr("href", "/css/themes-library-allison.css");
-	$("#themeroller-css").attr("href","/themes/Blitzer/jquery-ui.css");
+//	$("#themeroller-css").attr("href","/themes/Blitzer/jquery-ui.css");
+	$("#themeroller-css").attr("href","/themes/fILL-contrast/jquery-ui.css");
 	$("#theme-logo").attr("src","/img/fill-lib-logo-theme2.png");
 	$(".small-function-button").switchClass("theme-chooser1 theme-chooser2","theme-chooser3",0);
 	$.cookie('fILL-theme','theme3', { expires: 7, path: '/' });
