oops - wrong comment type

--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -1,8 +1,8 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
-// printElement uses jQuery .browser, which was removed in jQuery 1.9
-// jquery-migrate restores this functionality:
+<!-- printElement uses jQuery .browser, which was removed in jQuery 1.9
+     jquery-migrate restores this functionality: -->
 <script type="text/javascript" src="/plugins/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="/plugins/jquery.printElement.min.js"></script>
 <script type="text/javascript" src="/js/receiving-1.1.js"></script>
