--- a/htdocs/css/themes-library-allison.css
+++ b/htdocs/css/themes-library-allison.css
@@ -730,6 +730,19 @@ input[type="button"]:hover.action-button-highlighted {
     color: #fff;
 }
 
+/* overrides button styles get overrun by jquery-ui styles... the background-image: none
+   is important.... */
+#overrides-list tbody tr td button.override-button.ui-button.ui-widget.ui-state-default.ui-corner-all.ui-button-text-only {
+    background-color: #7a7669;
+    color: #fff;
+    background-image: none;
+}
+#overrides-list tbody tr td button:hover.override-button.ui-button.ui-widget.ui-state-default.ui-corner-all.ui-button-text-only {
+    background-color: #a9a28b;
+    color: #fff;
+    background-image: none;
+}
+
 
 .dataTable th {
     background-color: #505050;
