--- a/htdocs/css/themes-library-allison.css
+++ b/htdocs/css/themes-library-allison.css
@@ -592,6 +592,7 @@ and (max-width : 65em)
 #lib-nav-primary
 {
   border-bottom: #505050 solid 5px;
+  border-width: auto;
 }
 
 #lib-nav-primary ul
