added region map

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -98,8 +98,7 @@ $('document').ready(function(){
 
 <div id="container">
   <div id="aside-img-left">
-    <img src="/img/fill-registration.jpg" alt="man sitting in a chair relaxing and reading a book">
-    <p class="note">Image care of <a href="https://www.flickr.com/photos/alancleaver/4297809244/">Alan Cleaver</a></p>
+    <img src="/img/regional_map.gif" alt="map of Manitoba with all the regions listed">
   </div>
 
   <div id="main-info-right" class="tone-box">
