added fill library documents

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -12,14 +12,14 @@
 	<li><p><a href="https://fill.sitka.bclibraries.ca/">Public fILL access </a></p></li>
 	<li><p><a href="/Patron_Guide.pdf">Patron brochure</a></p></li>
 	<li><p><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></p></li>
+
 	<p><strong>Library fILL</strong></p>
 	<li><p><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p></li>
+	<li><a href="?rm=send_pdf&doc=fILL_-_User_Guide.pdf">fILL User's Guide</a></li>
+    <li><a href="?rm=send_pdf&doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
+    <li><a href="?rm=send_pdf&doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
 	</ul>
 
-	<strong>More Info</strong>
-	<ul>
-	<li><p>More can be found under <a href="/cgi-bin/info.cgi?rm=info_documents_form">Documents</a></p></li>
-	</ul>
 </div>
 
 <div id="main-right" class="tone-box" role="complimentary">
