--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -9,12 +9,12 @@
 
 	<p><strong>Public fILL</strong></p>
 	<ul>
-	<li><p><a href="https://fill.sitka.bclibraries.ca/">Public fILL access </a></p></li>
-	<li><p><a href="/Patron_Guide.pdf">Patron brochure</a></p></li>
-	<li><p><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></p></li>
+	<li><a href="https://fill.sitka.bclibraries.ca/">Public fILL access </a></li>
+	<li><a href="/Patron_Guide.pdf">Patron brochure</a></li>
+	<li><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></li>
 
 	<p><strong>Library fILL</strong></p>
-	<li><p><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p></li>
+	<li><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></li>
 	<li><a href="?rm=send_pdf&doc=fILL_-_User_Guide.pdf">fILL User's Guide</a></li>
     <li><a href="?rm=send_pdf&doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a></li>
     <li><a href="?rm=send_pdf&doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a></li>
