--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -75,7 +75,7 @@ $('document').ready(function() {
     <h3>Pull list</h3>
     <table id="pull-list">
       <thead>
-	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Requestor note</th><th>Your barcode for the requesting library</th></tr>
+	<tr><th>Call Number</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Requestor note</th><th>Your barcode for the requesting library</th></tr>
       </thead>
       <tfoot><tr><td colspan="8">You can print this and take it to the stacks.</td></tr></tfoot>
       <tbody>
