--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -1,5 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<script type="text/javascript" src="/js/patron-registration-1.0.js"></script>
+<script type="text/javascript" src="/js/patron-registration-1.1.js"></script>
 
 <!-- A bit of custom css for this page only -->
 <style type="text/css">
@@ -41,8 +41,14 @@ $('document').ready(function(){
         event.preventDefault();
     });
 
-    $( "#reg_username" ).blur(function() {
+    $("#sip2_registration_form").submit(function( event ) {
+        if (ValidateSIP2Form()) {
+          sip2_authenticate_and_register();
+        }
+        event.preventDefault();
+    });
 
+    $( "#reg_username" ).blur(function() {
         if ($("#reg_username").val() === undefined || $("#reg_username").val().length == 0) {
             // nothing to check yet
         } else {
@@ -70,7 +76,6 @@ $('document').ready(function(){
 
 
     $( "#password2" ).blur(function() {
-
         if ($("#password").val() === undefined 
            || $("#password").val().length == 0 
            || $("#password2").val() === undefined 
@@ -119,56 +124,62 @@ $('document').ready(function(){
     <div id="registration" style="display:none; clear:both;">
       <br/>
       <h2>Registration form</h2>
-      <form id="registration_form" action="/cgi-bin/register-patron.cgi" method="POST">
+      <div id="sip2" style="display:none">
+	<p>Your library supports remote authentication.</p>
+	<form id="sip2_registration_form" action="/cgi-bin/register-patron-sip2.cgi" method="POST">
 
-	<!-- NOTE: the input field ids are used in the register_patron function
-	     in patron-registration-1.0.js to pull the data from the fields and
-	     create the paramters to the ajaxy cgi-bin/register-patron.cgi
+	  <!-- NOTE: the input field ids are used in the register_patron function
+	       in patron-registration.js to pull the data from the fields and
+	       create the paramters to the ajaxy cgi-bin/register-patron.cgi
+	       
+	       This form's submit is captured (above, in the document.ready() function)
+	       to do some minimal validation before actually submitting.
+	    -->
+	  
+          <table id="fill-table">
+            <tr><th>Library card number</th><td><input type="text" id="barcode"></td></tr>
+            <tr><th>Library PIN number</th><td><input type="text" id="pin"></td></tr>
+          </table>
+          <input id="lid" type="hidden">
+	  <!-- id "submitRegistration" is used in patron-registration.js to identify the button -->
+	  <p id="msgFromLibrarySystem"></p>
+          <input id="submitSIP2Registration" class="button-left" type="submit" value="Submit">
+	  <p id="sip2_patron_name"></p>
+	</form>
+      </div>
+      <div id="non-sip2">
+	<form id="registration_form" action="/cgi-bin/register-patron.cgi" method="POST">
 
-	     This form's submit is captured (above, in the document.ready() function)
-	     to do some minimal validation before actually submitting.
-	  -->
+	  <!-- NOTE: the input field ids are used in the register_patron function
+	       in patron-registration-1.0.js to pull the data from the fields and
+	       create the paramters to the ajaxy cgi-bin/register-patron.cgi
+	       
+	       This form's submit is captured (above, in the document.ready() function)
+	       to do some minimal validation before actually submitting.
+	    -->
+	  
+          <table id="fill-table">
+            <tr><th>Home library</th><td><p id="home_library"></p></td></tr>
+            <tr><th>Your name</th><td><input type="text" id="patron_name"></td></tr>
+            <tr><th>Library card number</th><td><input type="text" id="barcode"></td></tr>
+            <tr><th>Email address</th><td><input type="text" id="email_address"></td></tr>
+            <tr><td colspan="2"><strong>You also need to choose a username and password for this system:</strong></td></tr>
+            <tr>
+	      <th>Username</th>
+	      <!-- this id="username" was conflicting with the username in the header,
+		   so I've renamed this one to "reg_username". -->
+              <td><input type="text" id="reg_username" size=30 maxlength=50><br><p id="username_message"></p></td>
+            </tr>
+            <tr><th>Password</th><td><input type="password" id="password" size=30 maxlength=50></td></tr>
+            <tr><th>Re-type Password</th><td><input type="password" id="password2" size=30 maxlength=50><br><p id="password_message"></p></td></tr>
+          </table>
+	  
+          <input id="home_library_town" type="hidden">
+	  <!-- id "submitRegistration" is used in patron-registration-1.0.js to identify the button -->
+          <input id="submitRegistration" class="button-left" type="submit" value="Submit">
+	</form>
+      </div>
 
-        <table id="fill-table">
-          <tr>
-        	  <th>Home library</th>
-        	  <td><p id="home_library"></p></td>
-        	</tr>
-          <tr>
-        	  <th>Your name</th>
-        	  <td><input type="text" id="patron_name"></td>
-        	</tr>
-          <tr>
-        	  <th>Library card number</th>
-        	  <td><input type="text" id="barcode"></td>
-        	</tr>
-          <tr>
-        	  <th>Email address</th>
-        	  <td><input type="text" id="email_address"></td>
-        	</tr>
-          <tr>
-        	  <td colspan="2"><strong>You also need to choose a username and password for this system:</strong></td>
-        	</tr>
-          <tr>
-        	  <th>Username</th>
-		  <!-- this id="username" was conflicting with the username in the header,
-		    so I've renamed this one to "reg_username". -->
-        	  <td><input type="text" id="reg_username" size=30 maxlength=50><br><p id="username_message"></p></td>
-        	</tr>
-          <tr>
-        	  <th>Password</th>
-        	  <td><input type="password" id="password" size=30 maxlength=50></td>
-        	</tr>
-          <tr>
-        	  <th>Re-type Password</th>
-        	  <td><input type="password" id="password2" size=30 maxlength=50><br><p id="password_message"></p></td>
-        	</tr>
-        </table>
-
-        <input id="home_library_town" type="hidden">
-	<!-- id "submitRegistration" is used in patron-registration-1.0.js to identify the button -->
-        <input id="submitRegistration" class="button-left" type="submit" value="Submit">
-      </form>
     </div>
     <br/>
 
